# FFXI-EventsDump

./: .gitignore  README.md  dump_opcodes.py  pyproject.toml
data/: zones.yaml
dumps/Abdhaljs Isle-Purgonorgo/: 16957466 - Herald.md  16957467 - Pursuivant.md  16957468 - Pursuivant.md  16957469 - Pursuivant.md  README.md  Zone Events.md  strings.txt
dumps/Abyssea - Altepa/: 17670591.md  17670592.md  17670593.md  17670594.md  17670595.md  17670596.md  17670597.md  17670598.md  17670599.md  17670600.md  17670601.md  17670602.md  17670603.md  17670604.md  17670605.md  17670606.md  17670607.md  17670608.md  17670609.md  17670610.md  17670611.md  17670612.md  17670618.md  17670620 - Conflux Surveyor.md  17670621 - Cruor Prospector.md  17670622 - Atma Infusionist.md  17670623 - Atma Fabricant.md  17670624 - Time Master Debug.md  17670625 - AP Master Debug.md  17670628 - Sturdy Pyxis.md  17670629 - Sturdy Pyxis.md  17670630 - Sturdy Pyxis.md  17670631 - Sturdy Pyxis.md  17670632 - Sturdy Pyxis.md  17670633 - Sturdy Pyxis.md  17670634 - Sturdy Pyxis.md  17670635 - Sturdy Pyxis.md  17670636 - Sturdy Pyxis.md  17670637 - Sturdy Pyxis.md  17670638 - Sturdy Pyxis.md  (+130 more)
dumps/Abyssea - Attohwa/: 17658351.md  17658352.md  17658353.md  17658354.md  17658355.md  17658356.md  17658357.md  17658358.md  17658359.md  17658360.md  17658361.md  17658362.md  17658363.md  17658364.md  17658365.md  17658366.md  17658367.md  (+166 more)
models/: entities.py  events.py  strings.py  zones.py
parser/: control_flow.py  entitydat.py  eventcode.py  eventdat.py  string_formatter.py  stringdat.py  subroutine.py
templates/: actor_simple.md.j2  event_simple.md.j2  zone_simple.md.j2
tests/: __init__.py  test_control_flow.py  test_string_formatter.py
(+195979 files in other folders)
